syntax = "proto3";

package ride_payment;

service RidePaymentService {
  rpc PayRide (PayRideRequest) returns (PayRideResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message PayRideRequest {
  string rideId = 1;
  float amount = 2;
  string userId = 3;
}

message PayRideResponse {
  string rideId = 1;
  string status = 2;
}

message ProcessPaymentRequest {
  string rideId = 1;
}

message ProcessPaymentResponse {
  string rideId = 1;
  string status = 2;
}
